Fix icon alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -108,11 +108,23 @@ nav li {
 
 .infobox {
     margin: 5px;
+    width: 25%;
+    text-align: center;
+}
+
+.images {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.imagebox {
+    margin: 5px;
     width: 30%;
     text-align: center;
 }
 
-.infobox img {
+.imagebox img {
     width: 30%;
 }
 
